<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:text="@string/login_form"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/textview1"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/chabi" />

    <EditText

        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="5sp"
        android:hint="@string/email_or_phonenumber"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/et_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:drawableLeft="@drawable/ic_https_black_24dp"
        android:drawablePadding="5sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/cb_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_pass"
        android:layout_marginBottom="-223dp"
        android:layout_marginStart="97dp"
        android:text="@string/show_password" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cb_pass"
        android:layout_marginTop="223dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/cb_pass"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="223dp"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_password" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:background="@android:color/holo_green_light"
        android:id="@+id/btn_createnewaccount"
        android:layout_below="@id/tv_forgot"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />


</RelativeLayout>