<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup"
        android:layout_marginStart="10dp"
        android:text="@string/fill_in_the_form_below_to_get_instant_acess" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/name"
        android:inputType="" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/email"
        android:inputType="" />

    <LinearLayout
        android:id="@+id/ll_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/et_email"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1.5"
            android:hint="@string/password1"
            android:inputType="textPassword" />

        <ImageButton
            android:id="@+id/ib_eye"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="30dp"
            android:layout_weight="0.5"
            android:background="@android:color/white"
            android:src="@drawable/ic_remove_red_eye_black_24dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/et_confirmpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:drawableEnd="@drawable/ic_remove_red_eye_black_24dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_confirmpassword"

        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/by_clicking_i_agree_term_and_condition" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_me_up" />


</RelativeLayout>